@@ -1,3 +1,6 @@
+[![Build Status](https://travis-ci.org/Shopify/shopify_python_api.svg?branch=master)](https://travis-ci.org/Shopify/shopify_python_api)
+[![Package Version](https://pypip.in/version/ShopifyAPI/badge.svg)](https://pypi.python.org/pypi/ShopifyAPI)
+
 # Shopify API
 
 The ShopifyAPI library allows Python developers to programmatically
@@ -59,11 +62,11 @@ these steps:
      shop_url = "https://%s:%s@SHOP_NAME.myshopify.com/admin" % (API_KEY, PASSWORD)
      shopify.ShopifyResource.set_site(shop_url)
      ```
-     
+
      That's it you're done, skip to step 6 and start using the API!
      For a partner App you will need to supply two parameters to the
      Session class before you instantiate it:
-     
+
      ```python
      shopify.Session.setup(api_key=API_KEY, secret=SHARED_SECRET)
      ```
@@ -82,27 +85,27 @@ these steps:
     * scope – Required – The list of required scopes (explained here: http://docs.shopify.com/api/tutorials/oauth)
     * redirect_uri – Optional – The URL that the merchant will be sent to once authentication is complete. Defaults to the URL specified in the application settings and must be the same host as that URL.
     ```
-    
+
     We've added the create_permision_url method to make this easier, first
     instantiate your session object:
-    
+
     ```python
     session = shopify.Session("SHOP_NAME.myshopify.com")
     ```
-   
+
     Then call:
 
     ```python
     scope=["write_products"]
     permission_url = session.create_permission_url(scope)
     ```
-    
+
     or if you want a custom redirect_uri:
-    
+
     ```python
     permission_url = session.create_permission_url(scope, "https://my_redirect_uri.com")
     ```
-    
+
 4.  Once authorized, the shop redirects the owner to the return URL of your
     application with a parameter named 'code'. This is a temporary token
     that the app can exchange for a permanent access token. Make the following call:
@@ -116,11 +119,11 @@ these steps:
     * client_secret – Required – The shared secret for your app
     * code – Required – The code you received in step 3
     ```
-    
+
     and you'll get your permanent access token back in the response.
 
-    There is a method to make the request and get the token for you. Pass 
-    all the params received from the previous call (shop, code, timestamp, 
+    There is a method to make the request and get the token for you. Pass
+    all the params received from the previous call (shop, code, timestamp,
     signature) as a dictionary and the method will verify
     the params, extract the temp code and then request your token:
 
