@@ -1,8 +1,6 @@
 import time
-try:
-    from hashlib import md5
-except ImportError:
-    from md5 import md5
+import hmac
+from hashlib import sha256
 try:
     import simplejson as json
 except ImportError:
@@ -53,7 +51,7 @@ class Session(object):
             return self.token
 
         if not self.validate_params(params):
-            raise ValidationException('Invalid Signature: Possibly malicious login')
+            raise ValidationException('Invalid HMAC: Possibly malicious login')
 
         code = params['code']
 
@@ -94,18 +92,30 @@ class Session(object):
         if int(params['timestamp']) < time.time() - one_day:
             return False
 
-        return cls.validate_signature(params)
+        return cls.validate_hmac(params)
 
     @classmethod
-    def validate_signature(cls, params):
-        if "signature" not in params:
+    def validate_hmac(cls, params):
+        if 'hmac' not in params:
             return False
 
-        sorted_params = ""
-        signature = params['signature']
+        hmac_calculated = cls.calculate_hmac(params)
+        hmac_to_verify = params['hmac']
 
-        for k in sorted(params.keys()):
-            if k != "signature":
-                sorted_params += k + "=" + str(params[k])
+        # Try to use compare_digest() to reduce vulnerability to timing attacks.
+        # If it's not available, just fall back to regular string comparison.
+        try:
+            return hmac.compare_digest(hmac_calculated, hmac_to_verify)
+        except AttributeError:
+            return hmac_calculated == hmac_to_verify
 
-        return md5((cls.secret + sorted_params).encode('utf-8')).hexdigest() == signature
+    @classmethod
+    def calculate_hmac(cls, params):
+        """
+        Calculate the HMAC of the given parameters in line with Shopify's rules for OAuth authentication.
+        See http://docs.shopify.com/api/authentication/oauth#verification.
+        """
+        # Sort and combine query parameters into a single string, excluding those that should be removed and joining with '&'.
+        sorted_params = '&'.join(['{0}={1}'.format(k, params[k]) for k in sorted(params.keys()) if k not in ['signature', 'hmac']])
+        # Generate the hex digest for the sorted parameters using the secret.
+        return hmac.new(cls.secret.encode(), sorted_params.encode(), sha256).hexdigest()
