@@ -1,1 +1,1 @@
-VERSION = '2.1.0'
+VERSION = '2.1.1'
